--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,6 @@
 # VITE_API_URL=http://localhost:8000/api
+# VITE_APP_NAME=MUNext 
+# VITE_API_URL=${VITE_API_URL}
+
 VITE_APP_NAME=MUNext 
-VITE_API_URL=${VITE_API_URL}
+VITE_API_URL=https://munext.basepan.com/api
