--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=u144904804_munext
 DB_USERNAME=u144904804_portalzone1
-DB_PASSWORD=Viccheese123@
+DB_PASSWORD=Godsaint123@
 
 # ============================================
 # SESSION & CACHE
